--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -42,8 +42,8 @@
                             <i class="icon la la-comment-o"></i>
                         </div>
                         <div class="right">
-                            <h4>74</h4>
-                            <p>Messages</p>
+                            <h4>{{ forums|length }}</h4>
+                            <p>Forums</p>
                         </div>
                     </div>
                 </div>
@@ -53,8 +53,8 @@
                             <i class="icon la la-bookmark-o"></i>
                         </div>
                         <div class="right">
-                            <h4>32</h4>
-                            <p>Shortlist</p>
+                            <h4>{{ stands|length }}</h4>
+                            <p>Stands</p>
                         </div>
                     </div>
                 </div>
