--- a/templates/layouts/HowSection.html.twig
+++ b/templates/layouts/HowSection.html.twig
@@ -24,7 +24,7 @@
             <!-- Process Block -->
             <div class="process-block col-lg-4 col-md-6 col-sm-12">
                 <div class="icon-box"><img src="images/resource/process-3.png" alt=""></div>
-                <h4>Guide<br>du candidat</h4>
+                <h4>Inscription<br>à la CVthèque</h4>
             </div>
         </div>
     </div>
