--- a/assets/styles/template/chosen.scss
+++ b/assets/styles/template/chosen.scss
@@ -279,7 +279,8 @@
     line-height: normal;
     font-weight: 500;
     box-shadow: none;
-    transition: none
+    transition: none;
+    width: 250px !important;
 }
 
 .chosen-container-multi .chosen-choices li.search-choice {
