--- a/templates/dashboard/sidebar-admin.html.twig
+++ b/templates/dashboard/sidebar-admin.html.twig
@@ -12,8 +12,11 @@
             <li><a href="dashboard-applicants.html"><i class="la la-file-invoice"></i> Candidatures</a></li>
             <li><a href="{{ path('cvtheque') }}"><i class="la la-bookmark-o"></i>CVthèque</a></li>
             <li><a href="{{ path('blog_index') }}"><i class="la la-box"></i>Actualités</a></li>
+            <li><a href="{{ path('annuaire_index') }}"><i class="la la-box"></i>Annuaire</a></li>
             <li><a href="{{ path('forum_index') }}"><i class="la la-comment-o"></i>Forums</a></li>
             <li><a href="{{ path('faq_index') }}"><i class="la la-question"></i>FAQ</a></li>
+            <li><a href="{{ path('questionnaire_index') }}"><i class="la la-question"></i>Questionnaires</a></li>
+            <li><a href="{{ path('question_index') }}"><i class="la la-question"></i>Questions</a></li>
             <li><a href="{{ path('stand_index') }}"><i class="la la-bell"></i>Stands</a></li>
             <li><a href="{{ path('pavillon_index') }}"><i class="la la-lock"></i>Pavillons</a></li>
             <li><a href="{{ path('app_logout') }}"><i class="la la-sign-out"></i>Logout</a></li>
