--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     {{ include('layouts/banner.html.twig') }}
     {{ include('layouts/HowSection.html.twig') }}
+    {{ include('layouts/Alaune.html.twig') }}
     {{ include('layouts/StandsSection.html.twig') }}
     {{ include('layouts/AgendaForums.html.twig') }}
     {{ include('layouts/blogSection.html.twig') }}
