--- a/templates/layouts/banner.html.twig
+++ b/templates/layouts/banner.html.twig
@@ -5,7 +5,7 @@
             <div class="content-column col-lg-7 col-md-12 col-sm-12">
                 <div class="inner-column wow fadeInUp"  data-wow-delay="500ms">
                     <div class="title-box">
-                        <h3>Il y a <span class="colored">93,178</span> offres d'emploi<br> Pour vous!</h3>
+                        <h3>Il y a <span class="colored">{{ annonces|length }}</span> offres d'emploi<br> Pour vous!</h3>
                         <div class="text">Trouver des emplois, des emplois et des opportunités de carrière</div>
                     </div>
 
