--- a/templates/layouts/HowSection.html.twig
+++ b/templates/layouts/HowSection.html.twig
@@ -2,7 +2,7 @@
 <section class="process-section pt-0">
     <div class="auto-container">
         <div class="sec-title text-center">
-            <h2>How It Works?</h2>
+            <h2>Comment ça marche ?</h2>
             <div class="text">Job for anyone, anywhere</div>
         </div>
 
