--- a/templates/layouts/banner.html.twig
+++ b/templates/layouts/banner.html.twig
@@ -5,8 +5,9 @@
             <div class="content-column col-lg-7 col-md-12 col-sm-12">
                 <div class="inner-column wow fadeInUp"  data-wow-delay="500ms">
                     <div class="title-box">
-                        <h3>Il y a <span class="colored">{{ annonces|length }}</span> offres d'emploi<br> Pour vous!</h3>
-                        <div class="text">Trouver des emplois, des emplois et des opportunités de carrière</div>
+                        <h3>Le <span class="colored">forum en ligne</span> de référence</h3>
+                        <h4>Pour accompagner vers l'emploi les candidats en situation de handicap</h4>
+                        <div class="text"></div>
                     </div>
 
                     <!-- Job Search Form -->
