--- a/templates/blog/new.html.twig
+++ b/templates/blog/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-dashboard.html.twig' %}
 
-{% block title %}New Blog{% endblock %}
+{% block title %}Ajouter un post{% endblock %}
 
 {% block body %}
     <section class="user-dashboard">
