--- a/templates/cvexperience/index.html.twig
+++ b/templates/cvexperience/index.html.twig
@@ -37,5 +37,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('cv_experience_new') }}">Create new</a>
+    <a href="{{ path('cvexperience_new') }}">Create new</a>
 {% endblock %}
