--- a/templates/pavillon/new.html.twig
+++ b/templates/pavillon/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Pavillon{% endblock %}
 
 {% block body %}
-    <h1>Create new Pavillon</h1>
+    <h1>Ajouter un pavillon</h1>
 
     {{ include('pavillon/_form.html.twig') }}
 
