--- a/templates/profile/new.html.twig
+++ b/templates/profile/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-dashboard.html.twig' %}
 
-{% block title %}New Profile{% endblock %}
+{% block title %}Ajouter un profile{% endblock %}
 
 {% block body %}
 <!-- Dashboard -->
