--- a/templates/stand/new.html.twig
+++ b/templates/stand/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-dashboard.html.twig' %}
 
-{% block title %}New Stand{% endblock %}
+{% block title %}Ajouter un stand{% endblock %}
 
 {% block body %}
 <!-- Dashboard -->
