--- a/templates/dashboard/sidebar-admin.html.twig
+++ b/templates/dashboard/sidebar-admin.html.twig
@@ -11,6 +11,7 @@
             <li><a href="dashboard-applicants.html"><i class="la la-file-invoice"></i>Candidatures</a></li>
             <li><a href="{{ path('cvtheque') }}"><i class="la la-folder"></i>CVthèque</a></li>
             <li><a href="{{ path('dictionnaire_index') }}"><i class="la la-paperclip"></i>Dictionnaire</a></li>
+            <li><a href="{{ path('email_index') }}"><i class="la la-mail-bulk"></i>Email templates</a></li>
             <li><a href="{{ path('faq_index') }}"><i class="la la-question"></i>FAQ</a></li>
             <li><a href="{{ path('forum_index') }}"><i class="la la-comment-o"></i>Forums</a></li>
             <li><a href="{{ path('annonce_index') }}"><i class="la la-briefcase"></i>Offres d'emploi </a></li>
