--- a/templates/search/filtrer_profile.html.twig
+++ b/templates/search/filtrer_profile.html.twig
@@ -1,4 +1,7 @@
 {{ form_start(form, {attr: {class: 'filter js-filter-form'}}) }}
+<div class="spinner-border js-loading" role="status" aria-hidden="true" style="display: none">
+    <span class="sr-only">Loading...</span>
+</div>
 <div class="inner-column">
     <div class="filters-outer">
         <button type="button" class="theme-btn close-filters">X</button>
@@ -12,24 +15,27 @@
             </div>
         </div>
 
-        <div class="checkbox-outer">
+        <div class="filter-block">
             <h4>Zone géographique</h4>
-            <ul class="checkboxes square">
+            <div class="form-group">
                 {{ form_row(form.zonegeographique) }}
-            </ul>
+                <span class="icon flaticon-map-locator"></span>
+            </divl>
         </div>
 
-        <div class="checkbox-outer">
+            <div class="filter-block">
             <h4>Type de diplôme</h4>
-            <ul class="checkboxes square">
+                <div class="form-group">
                 {{ form_row(form.typeDiplome) }}
-            </ul>
+                <span class="icon flaticon-diploma-1"></span>
+            </div>
         </div>
 
         <!-- Form Group -->
         <div class="form-group col-lg-2 col-md-12 col-sm-12 text-right">
             <button type="submit" class="theme-btn btn-style-one small">Trouver</button>
         </div>
+    </div>
     </div>
 </div>
 {{ form_end(form, {'render_rest': false}) }}
